src/corelib/kernel/qcore_unix_p.h
@@ -47,6 +47,7 @@
 
 #include "qplatformdefs.h"
 #include "qatomic.h"
+#include "qhash.h"
 
 #ifndef Q_OS_UNIX
 # error "qcore_unix_p.h included on a non-Unix system"
@@ -321,6 +322,19 @@ union qt_semun {
     struct semid_ds *buf;       /* buffer for IPC_STAT, IPC_SET */
     unsigned short *array;      /* array for GETALL, SETALL */
 };
+
+#ifndef QT_POSIX_IPC
+#ifndef QT_NO_SHAREDMEMORY
+#ifndef Q_OS_ANDROID
+static inline key_t qt_safe_ftok(const QByteArray &filename, int proj_id)
+{
+    // Unfortunately ftok can return colliding keys even for different files.
+    // Try to add some more entropy via qHash.
+    return ::ftok(filename.constData(), qHash(filename, proj_id));
+}
+#endif // !Q_OS_ANDROID
+#endif // !QT_NO_SHAREDMEMORY
+#endif // !QT_POSIX_IPC
 
 QT_END_NAMESPACE
 
